--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-gator",
-  "version": "0.0.1",
+  "version": "0.0.2-0",
   "description": "json-gator is a javascript utility to perform aggregations on JSON-formatted data.",
   "main": "lib/index.js",
   "scripts": {
